chore: import repository https://github.com/data-platform-skn/jx3-sb.git
this commit will trigger a pipeline to [generate the CI/CD configuration](https://jenkins-x.io/docs/v3/about/how-it-works/#importing--creating-quickstarts) which will create a second commit on this Pull Request before it auto merges

--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -9,6 +9,7 @@ spec:
     providerKind: github
     repositories:
     - name: jx3-golang-1
+    - name: jx3-sb
     - name: jx3-springboot
     scheduler: in-repo
   slack:
